--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "name": "be",
   "version": "1.0.0",
-  "main": "script.js",
+  "main": "index.js",
   "devDependencies": {},
   "scripts": {
     "start":"",
